Fix various popup button issues. When there is no popup, button will be correctly sized (no extra space on right). When there is only a popup, entire button area is clickable. Combo buttons are mostly unchanged except that the popup click area is larger (anything to the right of the separator bar. An image is used so the arrow has a consistent shape and size across browsers.

--- a/static/june_2007_style/blue/base.css
+++ b/static/june_2007_style/blue/base.css
@@ -77,16 +77,12 @@ ul.manage-table-actions li{display:block;float:left;margin-left:0.5em;}
 .action-button > *{vertical-align:middle;}
 .action-button:hover{color:black;background:#dddddd;}
 .action-button:active{color:white;background:#aaaaaa;}
-.menubutton{display:inline-block;cursor:pointer;position:relative;user-select:none;-moz-user-select:none;-webkit-user-select:none;border:solid transparent 1px;-moz-border-radius:0.5em;-webkit-border-radius:0.5em;border-radius:0.5em;padding:3px 0.5em;margin:-3px -0.5em;padding-right:1.5em;}
-.menubutton .label,.menubutton .arrow{position:relative;display:block;}
-.menubutton .label{border-right:none;}
-.menubutton .arrow{padding-left:2px;width:1em;position:absolute;top:0;right:5px;height:100%;}
-.menubutton .arrow > span{display:inline-block;padding-top:3px;}
+.menubutton{display:inline-block;cursor:pointer;position:relative;user-select:none;-moz-user-select:none;-webkit-user-select:none;border:solid transparent 1px;-moz-border-radius:0.5em;-webkit-border-radius:0.5em;border-radius:0.5em;padding:3px 0.5em;margin:-3px -0.5em;}
+.menubutton .label{position:relative;display:block;border-right:none;}
+.menubutton.popup{padding-right:1.5em;background:url(../images/dropdownarrow.png) no-repeat right 8px;}
 .menubutton:hover{border-color:#aaaaaa;}
-.menubutton.split{padding-right:2em;}
-.menubutton.split .arrow{border-left:solid transparent 1px;}
-.menubutton.split:hover{}
-.menubutton.split:hover .arrow{border-left:solid #aaaaaa 1px;}
+.menubutton.popup.split{padding-right:2em;}
+.menubutton.popup.split:hover{background:url(../images/ddarrowsplit.png) no-repeat right -38px;}
 .overlay-border{position:absolute;top:0;left:0;height:100%;width:100%;padding:1em;margin:-1em;background-color:rgba(0,0,0,0.5);-moz-border-radius:1em;-webkit-border-radius:1em;z-index:-1;}
 div.popmenu-wrapper{position:absolute;top:100%;z-index:20000;}
 div.popmenu-wrapper ul{display:block;margin:0;padding:0;background:white;color:#333;font-weight:bold;font-style:normal;white-space:nowrap;border:solid #aaaaaa 1px;padding:3px 0;-moz-border-radius:0.5em;-webkit-border-radius:0.5em;border-radius:0.5em;user-select:none;-moz-user-select:none;-webkit-user-select:none;}
