--- a/static/june_2007_style/blue/panel_layout.css
+++ b/static/june_2007_style/blue/panel_layout.css
@@ -25,8 +25,9 @@ body{font:75% verdana, "Bitstream Vera Sans", geneva, arial, helvetica, helve, s
 .menu-bg{background:#C1C9E5 url(menu_bg.png) top repeat-x;}
 div.unified-panel-body{position:absolute;top:2em;bottom:0;width:100%;margin-top:1px;}
 .panel-header-button{color:#333;text-decoration:none;display:inline-block;cursor:pointer;margin:-1px;padding:1px;padding-right:0.5em;padding-left:0.5em;-moz-border-radius:0.5em;-webkit-border-radius:0.5em;border-radius:0.5em;background:#bbb;}
-.panel-header-button:hover{color:black;background:#aaaaaa;}
-.panel-header-button:active{color:white;background:#aaaaaa;}
+.panel-header-button.popup{padding-right:1.75em;background:url(../images/dropdownarrow.png) no-repeat right 7px;}
+.panel-header-button:hover{color:black;background-color:#aaaaaa;}
+.panel-header-button:active{color:white;background-color:#aaaaaa;}
 #overlay{position:fixed;top:0;left:0;width:100%;height:100%;z-index:20000;}
 .dialog-box-container{position:relative;margin-top:80px;margin-right:auto;margin-left:auto;}
 .dialog-box-wrapper{position:relative;padding:1em;background-color:rgba(0,0,0,0.5);-moz-border-radius:1em;-webkit-border-radius:1em;}
